# marmot

./: .gitignore  README.md  ansible.cfg  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
ansible/device_groups/01_simple/: README.md  playbook.yaml
ansible/device_groups/01_simple/filter_plugins/: serial_to_devicegroup.py
ansible/device_groups/01_simple/group_vars/: panorama.yaml  vault.yaml.example
ansible/operations/upgrade/: README.md  inventory.yaml  playbook.yaml
ansible/security_policy/01_simple/: playbook.yaml
ansible/security_policy/02_group_vars/: playbook.yaml
ansible/security_policy/02_group_vars/group_vars/: panorama.yaml
ansible/security_policy/04_tower_survey/: playbook.yaml
docker/: Dockerfile.arm
python/dynamic-groups/01_DUGs/: create_logins.py  create_users.py  dag_logins.xml  dag_users.xml  register_users.py  upload.py
python/dynamic/dynamic_user_groups/: .secrets.toml.example  create_logins.py  settings.toml  settings.yaml
python/operational_commands/01_get_hit_count/: app.py
python/operations/match_existing_rule/: app.py  settings.yaml
python/security_policy/01_simple/: rules.py
python/security_policy/02_iac/: .secrets.toml.example  rules.py  settings.toml
python/service/01_Kubernetes/: app.py  settings.toml
python/upgrade-assurance/simple/: example.secrets.toml  test.py
terraform/01_Simple/: terraform.tfvars
terraform/panos/01_Simple/: creds.json  provider.tf
terraform/panos/03_Complex_Resources/: .terraform.lock.hcl  terraform.tfvars
(+22 files in other folders)
